
Fixed bug when selecting a medium by location where it would have
to be selected twice.
http://code.google.com/p/phpvirtualbox/issues/detail?id=641

Minor UI enhancements.

EHCI is no longer enabled by default on USB controller when
creating a new VM.

Moved USB, Serial, and Parallel port settings back into their own
sections.

Progress operation text is now resizable.

-------------------------------------
	4.2-6	2013-07-22
-------------------------------------
Fixed bug where deleting or renaming a VM snapshot may not cause
the chooser to refresh VM data.

Minor translation bug fixes.

Fixed "Restore Defaults" button in Appliance Export Wizard.

VM settings dialog now prompts for reload if settings change while
the dialog is open.

VM settings dialog is now aware of VM state changes while the
dialog is open and updates VM editability accordingly.

Fixed XSS vulnerability.

Fixed bug that would not subscribe to events of machines that were
powered on while phpVirtualBox is open.

Added icons from VirtualBox source for Windows 8.1 and 2012.

Updated language files from latest VirtualBox release (4.2.16).

Added running VM count to VM Group tool tips.

Removing a copy of a VM in the chooser now removes it from the
interface rather than unregistering it.

Improved VM Group saving logic. Some items are no longer editable
or draggable while VM group definitions are being saved to
VirtualBox.

Minor UI changes.

Fixed bug that would not allow VMs to be dropped / copied into the
root VM group.

-------------------------------------
	4.2-5	2013-07-11
-------------------------------------
More details pane redraw fixes when VM selection list changes
while VM data is still loading

Fixed multiple IE8 bugs that affected selecting and removing VMs

Fixed bug that would incorrectly set the VRDE host to null if no
consoleHost was configured in config.php
http://code.google.com/p/phpvirtualbox/issues/detail?id=620
